force-app/main/default/objects/Activities__c/Activities__c.object-meta.xml
<CustomObject>
    <label>Activities</label>
    <nameField>
        <displayFormat>ACT-{000}</displayFormat>
        <label>Activity #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>