force-app/main/default/objects/Activities__c/fields/Acknowledged_On__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_On__c</fullName>
    <label>Acknowledged On</label>
    <type>DateTime</type>
</CustomField>