force-app/main/default/objects/Activities__c/fields/Acknowledgment_Time__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Time__c</fullName>
    <formula>Acknowledged_On__c  -  Escalated_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acknowledgment Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>