force-app/main/default/objects/Activities__c/fields/Activity_Plan__c.field-meta.xml
<CustomField>
    <fullName>Activity_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Plan</label>
    <referenceTo>Activity_Plan__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>