force-app/main/default/objects/Activities__c/fields/Activity_Plan_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Plan_Create_Date__c</fullName>
    <formula>Activity_Plan__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Plan Create Date</label>
    <type>DateTime</type>
</CustomField>