force-app/main/default/objects/Activities__c/fields/Activity_Source__c.field-meta.xml
<CustomField>
    <fullName>Activity_Source__c</fullName>
    <label>Activity Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>