force-app/main/default/objects/Activities__c/fields/Additional_Case__c.field-meta.xml
<CustomField>
    <fullName>Additional_Case__c</fullName>
    <formula>Case__r.Additional_Case__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Case #</label>
    <type>Text</type>
</CustomField>