force-app/main/default/objects/Activities__c/fields/AP_Description__c.field-meta.xml
<CustomField>
    <fullName>AP_Description__c</fullName>
    <label>AP Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>