force-app/main/default/objects/Activities__c/fields/AP_Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AP_Planned_Start_Date__c</fullName>
    <formula>Activity_Plan__r.Planned_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Planned Start Date</label>
    <type>DateTime</type>
</CustomField>