force-app/main/default/objects/Activities__c/fields/AP_Project_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>AP_Project_Plan_Number__c</fullName>
    <formula>Case__r.Project_Plan_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Project Plan Number</label>
    <type>Text</type>
</CustomField>