force-app/main/default/objects/Activities__c/fields/AP_Site__c.field-meta.xml
<CustomField>
    <fullName>AP_Site__c</fullName>
    <formula>Activity_Plan__r.Site__r.Site_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Plan Site</label>
    <type>Text</type>
</CustomField>