force-app/main/default/objects/Activities__c/fields/AP_Site_Country__c.field-meta.xml
<CustomField>
    <fullName>AP_Site_Country__c</fullName>
    <formula>TEXT(Activity_Plan__r.Site__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Site Country</label>
    <type>Text</type>
</CustomField>