force-app/main/default/objects/Activities__c/fields/AP_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>AP_Site_Number__c</fullName>
    <formula>Activity_Plan__r.Site__r.Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Site Number</label>
    <type>Text</type>
</CustomField>