force-app/main/default/objects/Activities__c/fields/AP_Study__c.field-meta.xml
<CustomField>
    <fullName>AP_Study__c</fullName>
    <formula>Activity_Plan__r.Study_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Study</label>
    <type>Text</type>
</CustomField>