force-app/main/default/objects/Activities__c/fields/AP_Template__c.field-meta.xml
<CustomField>
    <fullName>AP_Template__c</fullName>
    <formula>TEXT(Activity_Plan__r.Template__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Template</label>
    <type>Text</type>
</CustomField>