force-app/main/default/objects/Activities__c/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachments</label>
    <type>Checkbox</type>
</CustomField>