force-app/main/default/objects/Activities__c/fields/Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Id__c</fullName>
    <label>Call Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>