force-app/main/default/objects/Activities__c/fields/CallDurationInSeconds__c.field-meta.xml
<CustomField>
    <fullName>CallDurationInSeconds__c</fullName>
    <label>Call Duration</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>