force-app/main/default/objects/Activities__c/fields/Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Comments__c</fullName>
    <label>Case Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>