force-app/main/default/objects/Activities__c/fields/Display_In__c.field-meta.xml
<CustomField>
    <fullName>Display_In__c</fullName>
    <label>Display In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activities Only</fullName>
            </value>
            <value>
                <fullName>Assignment and Activity</fullName>
            </value>
            <value>
                <fullName>Calendar and Activities</fullName>
            </value>
            <value>
                <fullName>Communication and Activities</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Position and Activity</fullName>
            </value>
            <value>
                <fullName>To Do and Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>