force-app/main/default/objects/Activities__c/fields/Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Email__c</fullName>
    <formula>Contact_Name__r.Do_Not_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Email</label>
    <type>Checkbox</type>
</CustomField>