force-app/main/default/objects/Activities__c/fields/Email_Inbound_Email_Link__c.field-meta.xml
<CustomField>
    <fullName>Email_Inbound_Email_Link__c</fullName>
    <label>Email - Inbound Email Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>