force-app/main/default/objects/Activities__c/fields/Email_Inbound_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Inbound_From_Address__c</fullName>
    <label>Email - Inbound From Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>