force-app/main/default/objects/Activities__c/fields/Email_Inbound_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Inbound_Subject__c</fullName>
    <label>Email - Inbound Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>