force-app/main/default/objects/Activities__c/fields/Email_Inbound_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Email_Inbound_Timestamp__c</fullName>
    <label>Email - Inbound Timestamp</label>
    <type>DateTime</type>
</CustomField>