force-app/main/default/objects/Activities__c/fields/Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Id__c</fullName>
    <externalId>true</externalId>
    <label>Email Message Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>