force-app/main/default/objects/Activities__c/fields/Email_Outbound_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Outbound_To_Address__c</fullName>
    <label>Email - Outbound To Address</label>
    <type>TextArea</type>
</CustomField>