force-app/main/default/objects/Activities__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Additional Issue</fullName>
            </value>
            <value>
                <fullName>Consult</fullName>
            </value>
            <value>
                <fullName>Home Office</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Level II Technician</fullName>
            </value>
            <value>
                <fullName>Remote Session</fullName>
            </value>
            <value>
                <fullName>TAS/SME</fullName>
            </value>
            <value>
                <fullName>UMA</fullName>
            </value>
            <value>
                <fullName>UPDATE REQUEST</fullName>
            </value>
            <value>
                <fullName>Incoming Transfer</fullName>
            </value>
            <value>
                <fullName>REC VM @ C3i</fullName>
            </value>
            <value>
                <fullName>REC VM @ C3I DR</fullName>
            </value>
            <value>
                <fullName>REC VM @ Client VM Acct</fullName>
            </value>
            <value>
                <fullName>REC VM @ Client VM After Hours</fullName>
            </value>
            <value>
                <fullName>Rec VM, no CB Req</fullName>
            </value>
            <value>
                <fullName>Left VM - On Client System</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Shipment Information</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Unresponsive - Closed 3 VMs</fullName>
            </value>
            <value>
                <fullName>Unresponsive ¿ No VMs Option</fullName>
            </value>
            <value>
                <fullName>Continuing Support</fullName>
            </value>
            <value>
                <fullName>Initial Support</fullName>
            </value>
            <value>
                <fullName>Resolution Confirmation</fullName>
            </value>
            <value>
                <fullName>Shipment Delay</fullName>
            </value>
            <value>
                <fullName>Deskside</fullName>
            </value>
            <value>
                <fullName>Article Not Available</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>