force-app/main/default/objects/Activities__c/fields/Field_Force__c.field-meta.xml
<CustomField>
    <fullName>Field_Force__c</fullName>
    <formula>Contact_Name__r.Field_Force__r.Name</formula>
    <label>Field Force</label>
    <type>Text</type>
</CustomField>