force-app/main/default/objects/Activities__c/fields/Gilead_AE_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Gilead_AE_Unique_Identifier__c</fullName>
    <label>AE Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>