force-app/main/default/objects/Activities__c/fields/Gilead_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Call_Disposition__c</fullName>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed Successfully</fullName>
            </value>
            <value>
                <fullName>Transfer Completed Successfully</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Test Call</fullName>
            </value>
            <value>
                <fullName>Hang up</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>