force-app/main/default/objects/Activities__c/fields/Gilead_Call_Source__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Call_Source__c</fullName>
    <label>Call Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call - Inbound</fullName>
            </value>
            <value>
                <fullName>Call - Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>