force-app/main/default/objects/Activities__c/fields/Gilead_Call_Topic__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Call_Topic__c</fullName>
    <label>Call Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(!) Aggressive Caller</fullName>
            </value>
            <value>
                <fullName>(!) Bomb Threat</fullName>
            </value>
            <value>
                <fullName>(!) Disaster Procedures</fullName>
            </value>
            <value>
                <fullName>(!) Injury Compensation</fullName>
            </value>
            <value>
                <fullName>(!) Lawsuit DHS</fullName>
            </value>
            <value>
                <fullName>(!) Lawsuit TDF</fullName>
            </value>
            <value>
                <fullName>(!) Legal Matters</fullName>
            </value>
            <value>
                <fullName>(!) Lost&amp;Found, Badges&amp;Keys</fullName>
            </value>
            <value>
                <fullName>(!) Regulatory Agency</fullName>
            </value>
            <value>
                <fullName>(!) Site Emer &amp; Evac Coord</fullName>
            </value>
            <value>
                <fullName>(!) Site Security</fullName>
            </value>
            <value>
                <fullName>(!) Suicide Threat</fullName>
            </value>
            <value>
                <fullName>(!) Threatening Call</fullName>
            </value>
            <value>
                <fullName>(AE) Gilead Product</fullName>
            </value>
            <value>
                <fullName>(BUS) Grants and Funding</fullName>
            </value>
            <value>
                <fullName>(BUS) Partner Inquiry</fullName>
            </value>
            <value>
                <fullName>(BUS) Policies &amp; Proc</fullName>
            </value>
            <value>
                <fullName>(BUS) Records Management</fullName>
            </value>
            <value>
                <fullName>(CLUB G) Access</fullName>
            </value>
            <value>
                <fullName>(ENV HEALTH &amp; SFTY) Erg Eval</fullName>
            </value>
            <value>
                <fullName>(ENV HEALTH &amp; SFTY) Work Comp</fullName>
            </value>
            <value>
                <fullName>(FAC) Catering</fullName>
            </value>
            <value>
                <fullName>(FAC) Commuter Checks</fullName>
            </value>
            <value>
                <fullName>(FAC) Conference Room</fullName>
            </value>
            <value>
                <fullName>(FAC) Site Maintenance</fullName>
            </value>
            <value>
                <fullName>(FIN) Exp Rep, Check Req&amp;Inv</fullName>
            </value>
            <value>
                <fullName>(GEN) Opt-Out</fullName>
            </value>
            <value>
                <fullName>(GEN) Unidentified Topic</fullName>
            </value>
            <value>
                <fullName>(GEN) Wrong Number</fullName>
            </value>
            <value>
                <fullName>(HR) HR, Benefits, Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>