force-app/main/default/objects/Activities__c/fields/Gilead_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Vendor</fullName>
            </value>
            <value>
                <fullName>Gilead Non-Public</fullName>
            </value>
            <value>
                <fullName>Gilead Public</fullName>
            </value>
            <value>
                <fullName>Special Procedure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>