force-app/main/default/objects/Activities__c/fields/Gilead_Email_Website__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Email_Website__c</fullName>
    <label>Email/Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>