force-app/main/default/objects/Activities__c/fields/Gilead_Hours__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Hours__c</fullName>
    <label>Hours</label>
    <length>100</length>
    <type>Text</type>
</CustomField>