force-app/main/default/objects/Activities__c/fields/Gilead_Inquiry_Request__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Inquiry_Request__c</fullName>
    <label>Inquiry Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Gilead_Call_Topic__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggressive caller identified</fullName>
            </value>
            <value>
                <fullName>All Other Gilead Products</fullName>
            </value>
            <value>
                <fullName>All emergencies, accidents, illnesses, life threatening situations</fullName>
            </value>
            <value>
                <fullName>Asegua Co-Pay</fullName>
            </value>
            <value>
                <fullName>Bomb threat received</fullName>
            </value>
            <value>
                <fullName>Carriers inquiry on where to deliver</fullName>
            </value>
            <value>
                <fullName>Cayston Access Program (CAP)</fullName>
            </value>
            <value>
                <fullName>Clinical Trials for Product</fullName>
            </value>
            <value>
                <fullName>Co-Pay Card Program (Ranexa)</fullName>
            </value>
            <value>
                <fullName>Co-Pay Card Program HCV</fullName>
            </value>
            <value>
                <fullName>Co-Pay Card Program HIV &amp; HBV</fullName>
            </value>
            <value>
                <fullName>CoPay Card Program Cayston</fullName>
            </value>
            <value>
                <fullName>CoPay Card Program Letairis</fullName>
            </value>
            <value>
                <fullName>CoPay Card Program Vemlidy</fullName>
            </value>
            <value>
                <fullName>CoPay Card Program Zydelig</fullName>
            </value>
            <value>
                <fullName>Consumers threatening legal action</fullName>
            </value>
            <value>
                <fullName>Directions to Foster City</fullName>
            </value>
            <value>
                <fullName>Employee Ergonomic Evaluation</fullName>
            </value>
            <value>
                <fullName>Employee Inquiry for HR, Benefits, Training</fullName>
            </value>
            <value>
                <fullName>Employee assistance with Concur</fullName>
            </value>
            <value>
                <fullName>Employee assistance with catering</fullName>
            </value>
            <value>
                <fullName>Employee assistance with commuter checks</fullName>
            </value>
            <value>
                <fullName>Employee assistance with conference setup</fullName>
            </value>
            <value>
                <fullName>Employee assistance with site maintenance</fullName>
            </value>
            <value>
                <fullName>Employees requesting expense reports or checks; Suppliers for invoices</fullName>
            </value>
            <value>
                <fullName>Employees requiring travel assistance</fullName>
            </value>
            <value>
                <fullName>Employess inquiry on Club G access</fullName>
            </value>
            <value>
                <fullName>FDA, Law Enforcement, Health Agencies</fullName>
            </value>
            <value>
                <fullName>Gilead Field Rep Request</fullName>
            </value>
            <value>
                <fullName>Inquiries (Ranexa) - Use FAQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>