force-app/main/default/objects/Activities__c/fields/Gilead_MCN__c.field-meta.xml
<CustomField>
    <fullName>Gilead_MCN__c</fullName>
    <label>MCN #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>