force-app/main/default/objects/Activities__c/fields/Gilead_MI__c.field-meta.xml
<CustomField>
    <fullName>Gilead_MI__c</fullName>
    <label>MI #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>