force-app/main/default/objects/Activities__c/fields/Gilead_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Phone_2__c</fullName>
    <label>Phone 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>