force-app/main/default/objects/Activities__c/fields/Gilead_Phone__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Phone__c</fullName>
    <label>Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>