force-app/main/default/objects/Activities__c/fields/Gilead_PQC_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Gilead_PQC_Unique_Identifier__c</fullName>
    <label>PQC Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>