force-app/main/default/objects/Activities__c/fields/Gilead_PR_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Gilead_PR_Identifier__c</fullName>
    <label>PR Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>