force-app/main/default/objects/Activities__c/fields/Gilead_Product__c.field-meta.xml
<CustomField>
    <fullName>Gilead_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AmBisome</fullName>
            </value>
            <value>
                <fullName>Atripla</fullName>
            </value>
            <value>
                <fullName>Atripla (Discontinued)</fullName>
            </value>
            <value>
                <fullName>Authorized Generic Use Harvoni/Epclusa</fullName>
            </value>
            <value>
                <fullName>Biktarvy</fullName>
            </value>
            <value>
                <fullName>Cayston</fullName>
            </value>
            <value>
                <fullName>Complera</fullName>
            </value>
            <value>
                <fullName>Descovy</fullName>
            </value>
            <value>
                <fullName>Emtriva</fullName>
            </value>
            <value>
                <fullName>Epclusa</fullName>
            </value>
            <value>
                <fullName>Filgotinib</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Genvoya</fullName>
            </value>
            <value>
                <fullName>Harvoni</fullName>
            </value>
            <value>
                <fullName>Hepsera</fullName>
            </value>
            <value>
                <fullName>Hepsera (Discontinued)</fullName>
            </value>
            <value>
                <fullName>Jyseleca (Filgotinib)</fullName>
            </value>
            <value>
                <fullName>Letairis</fullName>
            </value>
            <value>
                <fullName>Lexiscan</fullName>
            </value>
            <value>
                <fullName>Macugen</fullName>
            </value>
            <value>
                <fullName>Momelotinib</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Odefsey</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ranexa (Discontinued)</fullName>
            </value>
            <value>
                <fullName>Remdesivir</fullName>
            </value>
            <value>
                <fullName>Selonsertib</fullName>
            </value>
            <value>
                <fullName>Sovaldi</fullName>
            </value>
            <value>
                <fullName>Stribild</fullName>
            </value>
            <value>
                <fullName>Sunlenca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>